# BigNumber

./: BigFloat.cpp  BigFloat.h  BigFloatPowerCalc.cpp  BigInt.cpp  BigNumber.i  BigNumber.py  BigNumber_wrap.cxx  CMakeLists.txt  bigint.h  main.cpp  readme.txt  setup.py  test.py
vcbuild/: BigNumber.vcxproj  ReadMe.txt  stdafx.cpp
